# muote

./: .gitignore  Cargo.toml  PKGBUILD  README.md  engyls-0.1.0-1-x86_64.pkg.tar.zst  engyls.install  fresh.sh  marxist-quote-0.1.0-1-x86_64.pkg.tar.zst  marxist-quote.install  muote.install  test_desktop_quote.sh
assets/: desktop-quote.service  marxist-quote-fetch.service  marxist_quote.desktop  muote-fetch.service  muote-fetch.timer  muote.desktop
aur/: .SRCINFO  .gitignore  PKGBUILD  README.md  marxist-quote.install
aur/engyls/: .SRCINFO  PKGBUILD
aur/marxist-quote/: .SRCINFO  PKGBUILD
core/: Cargo.toml
core/src/: config.rs  lib.rs
desktop-quote/: Cargo.toml
desktop-quote/src/: desktop.rs  main.rs  quote_cache.rs  window.rs
desktop-quote/src/draw/: mod.rs
engyls/: Cargo.toml
engyls-place/src/: events.rs  main.rs
engyls-place/src/draw/: author.rs  guides.rs  mod.rs
engyls/src/config/: mod.rs  types.rs
engyls/src/fetch/: mod.rs  wikiquote.rs
gui/: Cargo.toml
gui/src/: main.rs
gui/src/app/: input.rs  mod.rs  model.rs  static_components.rs  widget.rs
gui/src/app/details/: background.rs  mod.rs  shadow.rs
pkg/engyls/: .BUILDINFO  .MTREE  .PKGINFO
pkg/engyls/usr/share/engyls/src/config/: manager.rs  types.rs  utils.rs
pkg/marxist-quote/: .BUILDINFO  .MTREE  .PKGINFO
pkg/marxist-quote/usr/share/applications/: marxist_quote.desktop
position-containers/: Cargo.toml
position-containers/src/: lib.rs  main.rs  state.rs
position-containers/src/draw/: author.rs  quote.rs
wikiquote-fetcher/: Cargo.toml
