[package]
name = "marxist-quote-core"
version = "0.1.6"
edition = "2024"
license = "GPL-3.0-or-later"

[lib]
name = "marxist_quote_core"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0"
dirs = "6.0"
engyls = { path = "../../engyls", default-features = false }
rand = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wikiquote-fetcher = { path = "../../wikiquote-fetcher" }
