[package]
name = "muote-core"
version = "0.3.0"
edition = "2024"
license = "GPL-3.0-or-later"

[lib]
name = "muote_core"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0"
dirs = "6.0"
rand = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha1 = "0.10"
wikiquote-fetcher = { path = "../../wikiquote-fetcher" }
