[package]
name = "marxist-quote-gui"
version = "0.2.0"
edition = "2024"
license = "GPL-3.0-or-later"

[dependencies]
relm4 = { version = "0.9.1", features = ["libadwaita"] }
gtk = { package = "gtk4", version = "0.9.3" }
adw = { package = "libadwaita", version = "0.7.0" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
dirs = "6.0"
anyhow = "1.0"
sha1 = "0.10"
marxist-quote-core = { path = "../core" }
position-containers = { path = "../position-containers" }
wikiquote-fetcher = { path = "../../wikiquote-fetcher" }
simplelog = "0.12.2"
log = "0.4.29"
