[package]
name = "position-containers"
version = "0.1.0"
edition = "2024"

[dependencies]
gtk = { package = "gtk4", version = "0.9.3" }
adw = { package = "libadwaita", version = "0.7.0" }
cairo-rs = "0.20.7"
pango = "0.20.7"
pangocairo = "0.20.7"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "6.0"
anyhow = "1.0"
sha1 = "0.10"
engyls = { path = "../engyls", default-features = false }
